added more core logic added updates on ui

--- a/src/HRApp/HRApp/appsettings.json
+++ b/src/HRApp/HRApp/appsettings.json
@@ -9,7 +9,7 @@
     "Default": "Data Source=.;Initial Catalog=HRAppDB;User ID=sa;Password=sa123;"
   },
   "AuthenticationService": {
-    "JwtSigningKey": "HACKATHON20!9",
+    "JwtSigningKey": "ScaleSquadHackathon20!9",
     "JwtIssuer": "http://localhost",
     "JwtAudience": "HRApp",
     "JwtValidForMinutes": "43800"
